# all_image_compress

./: CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  README.en.md  README.md  SECURITY.md  pubspec.yaml
benchmark/: image_benchmark.dart  phone_large_benchmark.dart
example/: pubspec.yaml
example/lib/: main.dart
example/test/: widget_test.dart
exemple/: pubspec.yaml
exemple/linux/runner/: my_application.cc
exemple/macos/Runner/Configs/: AppInfo.xcconfig
lib/: all_image_compress.dart  all_image_compress_io.dart
lib/src/: all_image_compress_base.dart  all_image_compress_io.dart  compress_bindings.dart  compress_config.dart  compress_format.dart  compress_result.dart  compress_worker.dart  compress_worker_rust.dart  format_detector.dart  lib.rs  resize_calculator.dart  semaphore.dart
test/: all_image_compress_test.dart  large_image_compress_test.dart  semaphore_test.dart
